--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,12 @@
     },
     "autoload": {
         "classmap": ["src/"],
-        "files": ["config/credentials.php", "config/constants.php"]
+        "files": ["config/credentials.php", "config/constants.php", "config/utility.php"]
     },
     "require": {
         "php": ">=7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7"
     }
 }
