--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^/?edit-list/(.*?)/?$ /edit-list?list_id=$1 [L]
 RewriteRule ^/?u/(.*?)/?$ /user-profile?user_id=$1 [L]
 RewriteRule ^(.+)$ index.php [QSA,L] 
 
+# RewriteRule ^([^/]+)$ /user-profile?user_id=$1
 # Display edit-list/1 instead of edit-list?list_id=1
 # RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /edit-list\?list_id=([^\&\ ]+)
 # RewriteRule ^/?edit-list$ /edit-list/%1? [L,R=301]
