--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "files": ["config/credentials.php", "config/constants.php", "config/utility.php"]
     },
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "phpmailer/phpmailer": "~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
