Make comment styling consistent with current conventions

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "description": "An MVC PHP Application",
     "keywords": ["php", "application", "mvc", "scratch", "php7", "oop", "model-view-controller", "object-oriented-programming", "mysql", "pdo", "web app"],
-    "homepage": "https://github.com/taniarascia/laconia",
+    "homepage": "https://laconia.site",
     "license": "MIT",
     "authors": [{
         "name": "Tania Rascia",
