--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/taniarascia/laconia.git"
   },
-  "keywords": ["php", "mvc", "oop"],
+  "keywords": ["php", "application", "mvc", "scratch", "php7", "oop", "model-view-controller", "object-oriented-programming", "mysql", "pdo", "web app"],
   "author": "Tania Rascia",
   "license": "MIT",
   "bugs": {
