Clean up README and packages

--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,39 @@
 {
-    "name": "laconia",
-    "type": "project",
-    "description": "An MVC PHP Application",
-    "keywords": ["php", "application", "mvc", "scratch", "php7", "oop", "model-view-controller", "object-oriented-programming", "mysql", "pdo", "web app"],
-    "homepage": "https://laconia.site",
-    "license": "MIT",
-    "authors": [{
-        "name": "Tania Rascia",
-        "homepage": "https://www.taniarascia.com",
-        "role": "Developer"
-    }],
-    "support": {
-        "issues": "https://github.com/taniarascia/laconia/issues",
-        "source": "https://github.com/taniarascia/laconia"
-    },
-    "autoload": {
-        "classmap": ["src/"],
-        "files": ["config/credentials.php", "config/constants.php", "config/utility.php"]
-    },
-    "require": {
-        "php": ">=7.0"
-    },
-    "require-dev": {
+  "name": "laconia",
+  "type": "project",
+  "description": "An MVC framework written without libraries or frameworks (PHP).",
+  "keywords": [
+    "php",
+    "application",
+    "mvc",
+    "scratch",
+    "php7",
+    "oop",
+    "model-view-controller",
+    "object-oriented-programming",
+    "mysql",
+    "pdo",
+    "web app"
+  ],
+  "homepage": "https://laconia.site",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Tania Rascia",
+      "homepage": "https://www.taniarascia.com",
+      "role": "Developer"
     }
+  ],
+  "support": {
+    "issues": "https://github.com/taniarascia/laconia/issues",
+    "source": "https://github.com/taniarascia/laconia"
+  },
+  "autoload": {
+    "classmap": [ "src/" ],
+    "files": [ "config/credentials.php", "config/constants.php", "config/utility.php" ]
+  },
+  "require": {
+    "php": ">=7.0"
+  },
+  "require-dev": {}
 }
