--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An MVC framework written without libraries or frameworks (PHP).",
   "author": {
     "name": "Tania Rascia",
-    "email": "me@taniarascia.com",
+    "email": "tania@taniarascia.com",
     "url": "https://www.taniarascia.com"
   },
   "homepage": "https://laconia.site",
