--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,7 +1,7 @@
 server {
   listen 8000;
   index index.php index.html index.htm;
-  root /application/public; # default Laravel's entry point for all requests
+  root /application/public; 
 
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
