--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "pdo",
     "web app"
   ],
-  "homepage": "https://laconia.site",
+  "homepage": "https://laconia.dev",
   "license": "MIT",
   "authors": [
     {
