--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       - my_mysql
       - my_reddis
     volumes:
-      - ./:/application:cached
-      
+      - ./:/application
+
   my_mysql:
     image: mysql:5.7
     ports:
@@ -24,7 +24,7 @@ services:
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
     volumes:
-      - ./storage/tmp/db:/var/lib/mysql:cached
+      - ./storage/tmp/db:/var/lib/mysql
 
   my_nginx:
     image: nginx
@@ -32,7 +32,7 @@ services:
       - "8000:8000"
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf:cached
-      - ./:/application:cached
+      - ./:/application
     depends_on:
       - my_app
 
