fix: docker-compose database name not correspond to name fo database incredential

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "3312:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=root
+      - MYSQL_DATABASE=laconia
       - MYSQL_USER=root
       - MYSQL_PASSWORD=root
     volumes:
