--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,17 @@
 version: '3'
 
-## NOTES:
-# if you see ${SOME_VAR} in this file,
-# these values are taken from .env file
-
 services:
   my_app:
     build: .
     image: my_app
     depends_on:
-      - database
-      - my_reddis
+      - mysql
     volumes:
-      - ./:/application
-  database:
+      - ./:/app
+  mysql:
     image: mysql:5.7
     ports:
-      - "3312:3306"
+      - '3312:3306'
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=laconia
@@ -24,17 +19,12 @@ services:
       - MYSQL_PASSWORD=root
     volumes:
       - ./storage/tmp/db:/var/lib/mysql
-
   my_nginx:
     image: nginx
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf:cached
-      - ./:/application
+      - ./:/app
     depends_on:
       - my_app
-  my_reddis:
-    image: redis
-    ports:
-      - "6379:6379"
