--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,21 +1,20 @@
 server {
   listen 8000;
-  index index.php index.html index.htm;
   root /app/public; 
 
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
 
   location / {
-    # try to serve file directly, fallback to index.php
-    try_files $uri /index.php?$args;
+    rewrite ^/?edit/(.*?)/?$ /edit?list_id=$1 break;
+    rewrite ^(.*)$ /index.php?username-router=$1 break;
   }
 
   location ~ \.php$ {
     fastcgi_index index.php;
     fastcgi_pass my_app:9000; # address of a fastCGI server
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param PATH_INFO $fastcgi_path_info;
-    include fastcgi_params;
+    fastcgi_index  index.php;
+    fastcgi_intercept_errors on;
+    include fastcgi.conf;
   }
 }
