--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,19 +1,16 @@
 server {
-  listen 8000;
-  root /app/public; 
+    listen 80;
+    root /app/public;
 
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
+    location / {
+        index index.php index.html;
+    }
 
-  location / {
-    rewrite ^/?edit/(.*?)/?$ /edit?list_id=$1 break;
-    rewrite ^(.*)$ /index.php?username-router=$1 break;
-  }
-
-  location ~ \.php$ {
-    fastcgi_index index.php;
-    fastcgi_pass my_app:9000; # address of a fastCGI server
-    fastcgi_intercept_errors on;
-    include fastcgi.conf;
-  }
+    location ~ \.php$ {
+        fastcgi_pass my_app:9000; # address of a fastCGI server
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
 }
