--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
     depends_on:
       - mysql
     volumes:
-      - ./:/app
+      - .:/app
+    expose:
+      - 9000
   mysql:
     image: mysql:5.7
     ports:
@@ -24,7 +26,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf:cached
-      - ./:/app
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
+      - .:/app
     depends_on:
       - my_app
