--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.3"
+    "phpunit/phpunit": "^8.3",
+    "guzzle/guzzle": "^3.9"
   }
 }
