change conf file for nginx and docker

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,14 +3,23 @@ server {
     root /app/public;
 
     location / {
-        index index.php index.html;
+        try_files $uri /index.php$is_args$args;
+    }
+
+    location ~ ^/.+\.php(/|$) {
+        fastcgi_pass my_app:9000; # address of a fastCGI server
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        internal;
     }
 
     location ~ \.php$ {
-        fastcgi_pass my_app:9000; # address of a fastCGI server
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-    }
+       return 404;
+   }
+
+   error_log /var/log/nginx/error.log;
+   access_log /var/log/nginx/access.log;
 }
+
