--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -6,7 +6,7 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    location ~ ^/.+\.php(/|$) {
+    location ~ ^/index\.php(/|$) {
         fastcgi_pass my_app:9000; # address of a fastCGI server
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
