--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
     depends_on:
       - mysql
     volumes:
-      - .:/app
-    expose:
-      - 9000
+      - ./:/var/www/laconia
+      - /usr/local/etc/php/php.ini
+    ports:
+      - 8080:80
   mysql:
     image: mysql:5.7
     ports:
@@ -21,12 +22,3 @@ services:
       - MYSQL_PASSWORD=root
     volumes:
       - ./storage/tmp/db:/var/lib/mysql
-  my_nginx:
-    image: nginx
-    ports:
-      - "8080:80"
-    volumes:
-      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
-      - .:/app
-    depends_on:
-      - my_app
