--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     depends_on:
       - mysql
     volumes:
+      - ./docker/credentials.php:/var/www/laconia/config/credentials.php
       - ./:/var/www/laconia
       - /usr/local/etc/php/php.ini
     ports:
