--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "laconia",
   "version": "2.0.1",
   "description": "An MVC framework from scratch in PHP",
-  "author": {
-    "name": "Tania Rascia",
-    "email": "tania@taniarascia.com",
-    "url": "https://www.taniarascia.com"
-  },
+  "author": "Tania Rascia",
   "homepage": "https://laconia.dev",
   "main": "index.js",
   "repository": "github:taniarascia/laconia",
